(library
 (public_name hw11_test)
 (name hw11_test)
 (inline_tests)
 (preprocess (pps ppx_inline_test))

; eval $(opam env --switch=5.1.1)
; dune runtest --instrument-with bisect_ppx --force
; bisect-ppx-report summary
 (instrumentation (backend bisect_ppx))
)

; When <mode> is unqualified, Dune will assume that 
; the current directory’s subdirectories are part of the same group of directories. 
; In particular, Dune will simultaneously scan all these directories 
; when looking for OCaml/Reason files. 
; 
; This allows you to split a library between several directories.

(include_subdirs unqualified)